--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div class="about-text">
             <p>jeevan Reddy</p>
             <p>Certified Civil Engineer</p>
-            <p>Hello,My name is Jeevan Reddy. I'm a Civil Enginner. </p>
-            <p>If You want to make any business contact me.</p><br>
+            <p>Hello, My name is Jeevan Reddy. I'm a Civil Enginner. </p>
+            <p>Looking for beautiful construction designs...!! Contact me.</p><br>
             <!------button-------->
-             <a href="#">Download CV</a>
+             <a href="#">Download Profile</a>
         </div>
     </div>
     <!----------------Contact---------------->
