--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>jeevan Reddy</p>
             <p>Certified Civil Engineer</p>
             <p>Hello, My name is Jeevan Reddy. I'm a Civil Enginner. </p>
-            <p>Looking for beautiful construction designs...!! Contact me.</p><br>
+            <p>Looking for beautiful construction designs...!! <a href = "contact.html">Contact me.</a></p><br>
             <!------button-------->
              <a href="#">Download Profile</a>
         </div>
