--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
         <!---------image------------>
         <img src="images/img1.jpeg" width="225px">
         <!----------About text-------->
-        <div class="about-text">
+        <div>
             <p>jeevan Reddy</p>
             <p>Certified Civil Engineer</p>
             <p>Hello, My name is Jeevan Reddy. I'm a Civil Enginner. </p>
             <p>Looking for beautiful construction designs...!! <a href = "contact.html">Contact me.</a></p><br>
-            <!------button-------->
+        </div>
+        <div class="about-text">
+             <!------button-------->
              <a href="#">Download Profile</a>
         </div>
     </div>
@@ -61,7 +63,7 @@
             </div>
         
             <div class="cc">
-                developed by Allala Rajesh
+                © Developed by Allala Rajesh
             </div>
         </div>
     </div>
