--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
         <img src="images/img1.jpeg" width="225px">
         <!----------About text-------->
         <div>
-            <p>jeevan Reddy</p>
+            <p>Jeevan Reddy</p>
             <p>Certified Civil Engineer</p>
             <p>Hello, My name is Jeevan Reddy. I'm a Civil Enginner. </p>
             <p>Looking for beautiful construction designs...!! <a href = "contact.html">Contact me.</a></p><br>
+            <div class="about-text">
+                <!------button-------->
+                <a href="#">Download Profile</a>
+            </div>
         </div>
-        <div class="about-text">
-             <!------button-------->
-             <a href="#">Download Profile</a>
-        </div>
+        
     </div>
     <!----------------Contact---------------->
     <div class="contact-info" id="about">
