--- a/support.html
+++ b/support.html
@@ -23,7 +23,7 @@
                         <li><a href="#profile">Profile</a></li>
                         <li><a href="#">Works</a></li>
                         <li><a href="#about">About us</a></li>
-                        <li><a href="contact.html">Contact us</a></li>
+                        <li><a href="support.html">Support</a></li>
                     </ul>
                 </nav>
         </div>
