--- a/support.html
+++ b/support.html
@@ -31,11 +31,13 @@
     <!-----------------Contact us----------------->
     <div class="contact">
         <div class="row">
-            <p>Contact us</p><br>
+            <p>Send a Query Below</p><br>
         <p>Name:</p><br>
         <input type="text" placeholder="name"><br>
-        <p>complaints</p>
-        <textarea name="complaints" cols="30" rows="10"></textarea>
+        <p>Email ID:</p><br>
+        <input type="text" placeholder="mail@example.com"><br>
+        <p>Complaints</p>
+        <textarea name="Complaints" cols="30" rows="10" size="1"></textarea>
         </div>
     </div>
 </body>
