--- a/support.html
+++ b/support.html
@@ -32,12 +32,12 @@
     <div class="contact">
         <div class="row">
             <p>Send a Query Below</p><br>
-        <p>Name:</p><br>
+        <p>Name:</p>
         <input type="text" placeholder="name"><br>
-        <p>Email ID:</p><br>
+        <p>Email ID:</p>
         <input type="text" placeholder="mail@example.com"><br>
         <p>Complaints</p>
-        <textarea name="Complaints" cols="30" rows="10" size="1"></textarea>
+        <textarea name="Complaints" cols="30" rows="10" style="resize: none"></textarea>
         </div>
     </div>
 </body>
