--- a/support.html
+++ b/support.html
@@ -32,10 +32,8 @@
     <div class="contact">
         <div class="row">
             <p>Send a Query Below</p><br>
-        <p>Name:</p>
-        <input type="text" placeholder="name"><br>
-        <p>Email ID:</p>
-        <input type="text" placeholder="mail@example.com"><br>
+        <p>Name:<input type="text" placeholder="name"></p> <br>
+            <p>Email ID: <input type="text" placeholder="mail@example.com"></p> <br> <br>
         <p>Complaints</p>
         <textarea name="Complaints" cols="30" rows="10" style="resize: none"></textarea>
         </div>
