--- a/support.html
+++ b/support.html
@@ -35,7 +35,8 @@
         <p>Name: <input type="text" placeholder="name"></p> <br>
             <p>Email ID: <input type="text" placeholder="mail@example.com"></p> <br> <br>
         <p>Complaints</p>
-        <textarea name="Complaints" cols="30" rows="10" style="resize: none"></textarea>
+        <textarea name="Complaints" cols="30" rows="10" style="resize: none">Enter your query here...</textarea> <br> <br>
+            <button>Send</button>
         </div>
     </div>
 </body>
