Update and rename support.html to quote.html

--- a/quote.html
+++ b/quote.html
@@ -23,7 +23,7 @@
                         <li><a href="#profile">Profile</a></li>
                         <li><a href="#">Works</a></li>
                         <li><a href="#about">About us</a></li>
-                        <li><a href="support.html">Support</a></li>
+                        <li><a href="quote.html">Get a Quote</a></li>
                     </ul>
                 </nav>
         </div>
@@ -31,11 +31,11 @@
     <!-----------------Contact us----------------->
     <div class="contact">
         <div class="row">
-            <p>Send a Query Below</p><br>
-        <p>Name: <input type="text" placeholder="name"></p> <br>
+            <p>Fill the Quotation Form Below:</p><br>
+        <p>Name: <input type="text" placeholder="Enter Your Name"></p> <br>
             <p>Email ID: <input type="text" placeholder="mail@example.com"></p> <br> <br>
         <p>Complaints</p>
-        <textarea name="Complaints" cols="30" rows="10" style="resize: none">Enter your query here...</textarea> <br> <br>
+        <textarea name="Land Layout Details" cols="30" rows="10" style="resize: none">Enter your query here...</textarea> <br> <br>
             <button>Send</button>
         </div>
     </div>
