--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="#profile">Profile</a></li>
                         <li><a href="#">Works</a></li>
                         <li><a href="#about">About us</a></li>
-                        <li><a href="support.html">Support</a></li>
+                        <li><a href="quote.html">Get a quote</a></li>
                     </ul>
                 </nav>
         </div>
