--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>Jeevan Reddy</p>
             <p>Certified Civil Engineer</p>
             <p>Hello, My name is Jeevan Reddy. I'm a Civil Enginner. </p>
-            <p>Looking for beautiful construction designs...!! <a href = "contact.html">Contact me.</a></p><br>
+            <p>Looking for beautiful construction designs...!! <a href = "quote.html">Contact</a> me with details</p><br>
             <div class="about-text">
                 <!------button-------->
                 <a href="#">Download Profile</a>
