--- a/quote.html
+++ b/quote.html
@@ -34,7 +34,7 @@
             <p>Fill the Quotation Form Below:</p><br>
         <p>Name: <input type="text" placeholder="Enter Your Name"></p> <br>
             <p>Email ID: <input type="text" placeholder="mail@example.com"></p> <br> <br>
-        <p>Complaints</p>
+        <p style="font-weight: bold">Land Layout Details</p>
         <textarea name="Land Layout Details" cols="30" rows="10" style="resize: none">Enter your query here...</textarea> <br> <br>
             <button>Send</button>
         </div>
