--- a/quote.html
+++ b/quote.html
@@ -31,7 +31,7 @@
     <!-----------------Contact us----------------->
     <div class="contact">
         <div class="row">
-            <p>Fill the Quotation Form Below:</p><br>
+            <p style="font-weight: bold">Fill the Quotation Form Below:</p><br>
         <p>Name: <input type="text" placeholder="Enter Your Name"></p> <br>
             <p>Email ID: <input type="text" placeholder="mail@example.com"></p> <br> <br>
         <p style="font-weight: bold">Land Layout Details</p>
